# habit-tracker-pi

./: .gitignore  .renovaterc.json5  Cargo.toml  bacon.toml  flake.nix  justfile  readme.md  rust-toolchain.toml  shell.nix
.github/workflows/: test.yaml
cli/: Cargo.toml
cli/src/: button.rs  display.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: access_layer.rs  lib.rs  migrations.rs  streak.rs
crates/ui/: Cargo.toml
crates/ui/src/: button.rs  interface.rs  lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
deploy/: habit-tracker.service
src/: button.rs  display.rs  main.rs
