[package]
name = "workout-tracker-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.13"
ctrlc = "3.4"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
gpiocdev-embedded-hal = "0.1.1"
linux-embedded-hal = "0.4.0"
profont = "0.7.0"
rppal = "0.18.0"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[dependencies.epd-waveshare]
# TODO: Switch to git once PR for 2in7_v2 is up
path = "../epd-waveshare"
