[workspace]
members = [
  "cli",
  "crates/db",
  "crates/ui", "crates/web",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7.5"
chrono = "0.4.38"
chrono-tz = "0.9.0"
crossbeam-channel = "0.5.13"
tempfile = "3.10.1"
thiserror = "1.0.63"
tracing = "0.1.14"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "sync"] }

db = { path = "crates/db" }
ui = { path = "crates/ui" }
