[package]
name = "habit-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
ctrlc = { version = "3.4", features = ["termination"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
gpiocdev = "0.7.1"
gpiocdev-embedded-hal = "0.1.1"
linux-embedded-hal = "0.4.0"
profont = "0.7.0"
rusqlite_migration = "2.0.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { workspace = true }

db = { workspace = true }
tracing = { workspace = true }
ui = { workspace = true }
web = { workspace = true }

[dependencies.epd-waveshare]
git = "https://github.com/ascandella/epd-waveshare.git"
branch = "add-2in7-v2"
