[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite_migration = "1.2.0"
chrono-tz = { workspace = true }
tracing = { workspace = true }

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[dev-dependencies]
tempfile = { workspace = true }
