[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
rusqlite_migration = "2.0.0"
thiserror = { workspace = true }
tracing = { workspace = true }

[dependencies.rusqlite]
version = "0.38.0"
features = ["bundled"]

[dev-dependencies]
tempfile = { workspace = true }
